--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ts:check": "tsc --noEmit",
     "prettier": "prettier --cache --ignore-path .gitignore --write --list-different .",
     "pretty": "yarn pretty-quick",
+    "prisma:migrate": "npx prisma migrate dev",
     "prisma:reset": "npx prisma migrate reset --force",
     "test": "yarn prisma:reset && yarn jest"
   },
@@ -36,12 +37,12 @@
     "jest": "^29.4.2",
     "prettier": "^2.8.3",
     "pretty-quick": "^3.1.3",
-    "prisma": "^4.10.0",
+    "prisma": "^4.10.1",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "*"
   },
   "dependencies": {
-    "@prisma/client": "^4.10.0"
+    "@prisma/client": "^4.10.1"
   }
 }
